# linux-tpm-fido2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  credentials.md  fido-smoke.sh  flake.nix  plan.md  security.md
.github/workflows/: ci.yml
.sqlx/: query-27862951746f5b6fe432bdc029a872084d354dce50ea2e884aa7aead87701c62.json  query-305edbe32c64a05d7d405a888b37bb8f6655ea7fabe16b0d0c2358f9507c9450.json  query-60e5fd809e706ea380fe008b3ef6089dc2d4cfb9c2f3faaf15e705762b748728.json  query-78876f0ee5ab588e288f9b14e25534697cafeeeabc5b2e2919acd615ad7ed4b3.json  query-7a84c7b21b773865e0c3682624b2e517bdcb3e365860d4dd6984f557ab864903.json  query-7ada316d8fe971f4d3fbcfc8026d824b4be6366b1c16afbb193d43b141612d52.json  query-7c620754302bec5a06d89c63c870291cae406285e603b0fd4fc309cf5eeedbb5.json  query-8be9e4a5ff56a1611daa5b59e1cf3c9aaa14bff24da5ef54092d90ff24716bfb.json  query-950b5b7e9beb87297f351d2cdc8b0a5148cb1750352d48cf17887c62bb7999e9.json  query-b5b6a0afa543faa49d81b3d7bbb9138122ae876cf1e7637e48b3cde324e00f1e.json  query-bbf63379394b58de7e9910cdf9d3aa29338fdad9e979e386ad748daf867faa37.json  query-c3e4ad4d82080b5ca09ca0726d44cc01ea19e2c93143e76de8af89a832c78c49.json  query-dbb6e44b4b693ba75b8e90caa3192d61c8eb6be45b119b0fa063867c2c2b95c5.json
agents/: cli-refactor-plan.md  plan-recovery.md  plan.md
assets/: tpm-fido2.policy  tpm-fido2.rules  tpm-fido2.service
docs/: architecture.md  security.md
migrations/: 20260713074500_create_credentials.sql  20260713093000_add_pcr_policy_and_recovery.sql  20260713100000_create_normalized_credential_tables.sql  20260713110000_add_user_id_to_credential_metadata.sql  20260713120000_add_auth_value_to_keyslots.sql  20260714120000_add_integrity_mac_to_credential_metadata.sql  20260716100000_create_client_pin_state.sql  20260716110000_add_discoverable_credential_metadata.sql  20260716120000_add_authorized_pcr_policy_package.sql  20260716130000_add_recovery_kdf_metadata.sql  20260717150000_create_daemon_config.sql  20260717160000_schema_normalization.sql  20260717170000_public_key_pem.sql
nix/: module.nix  nixos-module.nix  nixos-test-fido2-manage.nix  nixos-test-polkit.nix  nixos-test.nix  package.nix
nix/tests/: smoke_assert.py  smoke_register.py  test_delete_credential.py
src/: approval.rs  ctap2.rs  ctaphid.rs  gtk_ui.rs  hid.rs  ipc.rs  lib.rs  main.rs  management.rs  polkit.rs  session.rs  store.rs  systemd_logind.rs  tpm.rs
