[package]
name = "linux-tpm-fido2"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ciborium = "0.2.2"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
getrandom = "0.4.3"
gtk4 = "0.11.4"
libadwaita = "0.9.2"
libc = "0.2"
log = "0.4.27"
p256 = { version = "0.14", features = ["ecdsa"] }
rcgen = { version = "0.14.8", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11"
pbkdf2 = "0.13"
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
tokio = { version = "1.52.3", features = ["rt", "time"] }
toml = "1.1.2"
tss-esapi = "7.7.0"
uhid-virt = "0.0.8"
